--- a/index.html
+++ b/index.html
@@ -16,14 +16,22 @@
     <button>Try it free</button>
   </header>
 
+  <section class="hero">
+    
+    <h1>Build The Community Your Fans Will Love</h1>
+    <p>Huddle re-imagines the way we build communities. You have a voice, but so does 
+  your audience. Create connections with your users as you engage in genuine discussion. </p>
+  <button>Get Started For Free</button>
+  <img src="images/screen-mockups.svg" alt="screen-mockups"></img>
+  </section>
+
   
 
-  Build The Community Your Fans Will Love
+  
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does 
-  your audience. Create connections with your users as you engage in genuine discussion. 
+  
 
-  Get Started For Free
+  
 
   1.4k+
   Communities Formed
