created stats section

--- a/index.html
+++ b/index.html
@@ -11,18 +11,44 @@
 </head>
 <body>
 
+  <!-- HEADER-SECTION -->
+
   <header>
     <img src="images/logo.svg" alt="logo"></img>
     <button>Try it free</button>
   </header>
 
+  <!-- HERO-SECTION -->
+
   <section class="hero">
     
     <h1>Build The Community Your Fans Will Love</h1>
-    <p>Huddle re-imagines the way we build communities. You have a voice, but so does 
-  your audience. Create connections with your users as you engage in genuine discussion. </p>
-  <button>Get Started For Free</button>
-  <img src="images/screen-mockups.svg" alt="screen-mockups"></img>
+    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
+    <button>Get Started For Free</button>
+    <img src="images/screen-mockups.svg" alt="screen-mockups"></img>
+
+  </section>
+
+  <!-- STATS-SECTION -->
+
+  <section class="stats">
+
+    <div class="stat-data">
+      <img src="images/icon-communities.svg" alt="communities">
+      <div class="stat-text">
+        <p>1.4k+</p>
+        <span>Communities Formed</span>
+      </div>
+    </div>
+
+    <div class="stat-data">
+      <img src="images/icon-messages.svg" alt="messages">
+      <div class="stat-text">
+        <p>2.7m+</p>
+        <span>Messages <br>Sent</span>
+      </div>
+    </div>
+    
   </section>
 
   
@@ -30,15 +56,10 @@
   
 
   
-
   
 
-  1.4k+
-  Communities Formed
-
-  2.7m+
-  Messages Sent
-
+  
+  
   Grow Together
   Generate meaningful discussions with your audience and build a strong, loyal community. 
   Think of the insightful conversations you miss out on with a feedback form. 
