added flowing-conversation section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
     <img id="bg-section-bottom-mobile-1" src="images/bg-section-bottom-mobile-1.svg" alt="">
   </section>
   
+  <!-- FLOWING-SECTION -->
 
+  <section class="flowing">
+      
+    <img id="illustration-flowing-conversation" src="images/illustration-flowing-conversation.svg" alt="illustration-flowing-conversation">
+    <h2>Flowing Conversations</h2>
+    <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+    
+
+  </section>
   
   
 
@@ -75,9 +84,8 @@
   
    
 
-  Flowing Conversations
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-  just-in-time loading for a more natural flow.
+  
+  
 
   Your Users
   It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
