--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                 <div class="grow">
                     
-                    <img src="/images/bg-section-top-desktop-1.svg" alt="">
+                    <img src="./images/bg-section-top-desktop-1.svg" alt="">
 
                     <div class="grow-items">
 
@@ -124,7 +124,7 @@
 
         <footer>
 
-            <img src="/images/bg-footer-top-desktop.svg" alt="">
+            <img src="./images/bg-footer-top-desktop.svg" alt="">
 
             <div class="footer-container">
 
@@ -151,14 +151,14 @@
 
                         <div class="contact-detail">
 
-                            <img src="/images/icon-phone.svg" alt="phone">
+                            <img src="images/icon-phone.svg" alt="phone">
                             <p>Phone: +1-543-123-4567</p>
 
                         </div>
 
                         <div class="contact-detail">
 
-                            <img src="/images/icon-email.svg" alt="mail">
+                            <img src="images/icon-email.svg" alt="mail">
                             <p>example@huddle.com</p>
 
                         </div>
@@ -167,9 +167,9 @@
 
                     <div class="social-media">
 
-                        <img src="/images/facebook.svg" alt="fb">
-                        <img src="/images/instagram.svg" alt="ig">
-                        <img src="/images/twitter.svg" alt="tw">
+                        <img src="images/facebook.svg" alt="fb">
+                        <img src="images/instagram.svg" alt="ig">
+                        <img src="images/twitter.svg" alt="tw">
 
                     </div>
 
