--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-query.css">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V88WWDX5QN"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-V88WWDX5QN');
+</script>
+
 <body>
     <div class="container">
 
